WINDOWS USERS NEED HELP YOU KNOW

--- a/README
+++ b/README
@@ -5,3 +5,9 @@ WE MAKE THE MAGNORMO STANDS
 NOW WE MAKE
 INSTANT MAGNORMO
 FUCK YEAH
+
+YOU WANT INSTANT WINDORMO?
+ACQUIRE THIS DIGITAL DOWNLOAD, SPEW ITS CONTENTS INTO THE TOP LEVEL DIRECTORY
+http://github.com/downloads/cbranch/INSTANT-MAGNORMO/WindowsLibraries.zip
+USE THE MIGHTY QT COMMAND PROMPT TO INSTANT-MAGNORMO/GenerateVC2008.bat
+THEN YOU MAY BASK IN THE GLORY OF INSTANT-MAGNORMO.EXE
